--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     width: 100%;
     height: 90vh;
-    background-image: url(./src/imgs/taylor.jpg);
+    background-image: url(https://i.pinimg.com/564x/e3/1d/40/e31d4025b27c50d538801e00d67c7a4f.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
